k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reservation-system-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 5001

          - path: /salle/?(.*)
            pathType: Prefix
            backend:
              service:
                name: salle-service
                port:
                  number: 5002

          - path: /reservation/?(.*)
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 5003
